<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.MainActivity"
    android:background="@drawable/background_1">

    <ImageView
        android:id="@+id/ic_photo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/img_profile_home"
        android:foregroundGravity="center"
        android:src="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameInputText"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/radius_corner"
        android:gravity="start|center_vertical"
        android:hint="@string/input_name_hint"
        android:fontFamily="@font/poppins_regular"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_photo_img" />

    <EditText
        android:id="@+id/palindromeInputText"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/radius_corner"
        android:gravity="start|center_vertical"
        android:hint="@string/input_palindrome_hint"
        android:fontFamily="@font/poppins_regular"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputText" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/btn_primary"
        android:text="@string/btn_check"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/palindromeInputText" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/btn_primary"
        android:text="@string/btn_next"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>